Moved the command to run the tests out of .travis.yml
This will permit using the same command in other repos e.g. cortoproject/corto

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,6 @@ install:
   - rake
 
 script:
-  - cd examples/c
-  - corto run Crud
-  - corto run DynamicType
-  - corto run HelloWorld
-  - corto run Notifications
-  - corto run Select
+  - cd examples
+  - ./run.sh
+  - cd ..
