Add examples that demonstrate dynamic creation of types

--- a/c/core/rakefile
+++ b/c/core/rakefile
@@ -3,6 +3,10 @@ COMPONENTS = %w(
     attributes
     debugging
     dynamic_call
+    dynamic_class
+    dynamic_collection
+    dynamic_primitive
+    dynamic_struct
     error_handling
     identifier_expr
     json
