--- a/c/core/rakefile
+++ b/c/core/rakefile
@@ -2,9 +2,11 @@
 COMPONENTS = %w(
     attributes
     debugging
+    dynamic_bitmask
     dynamic_call
     dynamic_class
     dynamic_collection
+    dynamic_enum
     dynamic_primitive
     dynamic_struct
     error_handling
