Add fibonacci mount

--- a/c/core/rakefile
+++ b/c/core/rakefile
@@ -14,6 +14,7 @@ COMPONENTS = %w(
     identifier_expr
     json
     lookup
+    mount_fibo
     object_local_storage
     objects
     objects_fwddecl
