--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,14 @@ before_install:
   - cd cortoproject
   - git clone https://github.com/cortoproject/corto.git
   - git clone https://github.com/cortoproject/c-binding.git
+  - git clone https://github.com/cortoproject/json.git
   - git clone https://github.com/cortoproject/xml.git
   - git clone https://github.com/cortoproject/corto-language.git
   - git clone https://github.com/cortoproject/io.git
   - git clone https://github.com/cortoproject/cortodoc.git
   - git clone https://github.com/cortoproject/test.git
   - |+
-    echo 'COMPONENTS = %w(corto c-binding xml corto-language io cortodoc test)
+    echo 'COMPONENTS = %w(corto c-binding json xml corto-language io cortodoc test)
     require "#{ENV["CORTO_BUILD"]}/forward"' > rakefile
 
 install:
