Add initial modeling examples

--- a/c/modeling/rakefile
+++ b/c/modeling/rakefile
@@ -1,9 +1,8 @@
 
 COMPONENTS = %w(
-  benchmark
-  core
-  mounts
-  web
+    struct
+    inheritance
+    nested
 )
 
 require "#{ENV['CORTO_BUILD']}/forward"
