Add mount_write example, rename mount_simple to mount_read

--- a/c/mounts/mount_write/config.json
+++ b/c/mounts/mount_write/config.json
@@ -1,7 +1,8 @@
 {
     "id": "myMount",
-    "type": "mount_simple/DemoMount",
+    "type": "mount_write/DemoMount",
     "value": {
+        "contentType": "text/json",
         "query": {
             "from": "/data"
         }
