Rename mount_read, mount_write to read,write, fix mount rakefile

--- a/c/mounts/rakefile
+++ b/c/mounts/rakefile
@@ -1,7 +1,8 @@
 
 COMPONENTS = %w(
-    mount_simple
-    sinksource
+    read
+    write
+    ownership
 )
 
 require "#{ENV['CORTO_BUILD']}/forward"
