Add custom_iter example

--- a/c/mounts/custom_iter/config.json
+++ b/c/mounts/custom_iter/config.json
@@ -1,8 +1,8 @@
 {
     "id": "myMount",
-    "type": "read/DemoMount",
+    "type": "custom_iter/DemoMount",
     "value": {
-        "contentType": "text/json",
+        "contentType": "text/corto",
         "query": {
             "from": "/data"
         }
