change corto_update API to use underscores

--- a/c/mounts/historyBatching/config.json
+++ b/c/mounts/historyBatching/config.json
@@ -7,8 +7,7 @@
             "from": "/data"
         },
         "policy": {
-            "sampleRate": 0.5,
-            "queue.max": 1000
+            "sampleRate": 1
         }
     }
 }
