Add improved read example

--- a/c/mounts/read/project.json
+++ b/c/mounts/read/project.json
@@ -1,4 +1,10 @@
 {
     "id": "read",
-    "type": "application"
+    "type": "application",
+    "value": {
+        "description": "Making the world a better place",
+        "author": "Arthur Dent",
+        "version": "1.0.0",
+        "language": "c"
+    }
 }
