Build http router example

--- a/c/http/router/project.json
+++ b/c/http/router/project.json
@@ -1,13 +1,15 @@
 {
     "id": "corto/examples/c/http/router",
-    "type": "package",
+    "type": "application",
     "value": {
         "description": "HTTP POST Request API for handling install requests.",
         "author": "Alex Hendren",
         "version": "1.0.0",
         "language": "c",
         "dependencies": [
-            "corto/httprouter"
+            "corto/httprouter",
+            "corto/httpserver",
+            "corto/x"
         ]
     }
 }
